# telegram-bot

lib/: Cargo.toml
raw/src/requests/: answer_callback_query.rs  approve_chat_join_request.rs  mod.rs  send_message.rs
raw/src/requests/_base/: mod.rs
raw/src/requests/_base/request_types/: mod.rs
raw/src/types/: chat.rs  chat_join_request.rs  chat_member_updated.rs  chosen_inline_result.rs  message.rs  mod.rs  pre_checkout_query.rs  refs.rs  reply_markup.rs  shipping_query.rs  update.rs
